--- a/Resources/English.lproj/MainMenu.xib
+++ b/Resources/English.lproj/MainMenu.xib
@@ -11,7 +11,7 @@
 			<string key="NS.object.0">732</string>
 		</object>
 		<array class="NSMutableArray" key="IBDocument.EditedObjectIDs">
-			<integer value="372"/>
+			<integer value="456"/>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -1269,66 +1269,6 @@
 													<reference key="NSTextColor" ref="633706458"/>
 												</object>
 											</object>
-											<object class="NSImageView" id="665771770">
-												<reference key="NSNextResponder" ref="916186390"/>
-												<int key="NSvFlags">268</int>
-												<set class="NSMutableSet" key="NSDragTypes">
-													<string>Apple PDF pasteboard type</string>
-													<string>Apple PICT pasteboard type</string>
-													<string>Apple PNG pasteboard type</string>
-													<string>NSFilenamesPboardType</string>
-													<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
-													<string>NeXT TIFF v4.0 pasteboard type</string>
-												</set>
-												<string key="NSFrame">{{23, 247}, {32, 32}}</string>
-												<reference key="NSSuperview" ref="916186390"/>
-												<bool key="NSEnabled">YES</bool>
-												<object class="NSImageCell" key="NSCell" id="734323195">
-													<int key="NSCellFlags">130560</int>
-													<int key="NSCellFlags2">33554432</int>
-													<int key="NSAlign">0</int>
-													<int key="NSScale">0</int>
-													<int key="NSStyle">2</int>
-													<bool key="NSAnimates">NO</bool>
-												</object>
-												<bool key="NSEditable">YES</bool>
-											</object>
-											<object class="NSTextField" id="302604139">
-												<reference key="NSNextResponder" ref="916186390"/>
-												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{57, 254}, {208, 17}}</string>
-												<reference key="NSSuperview" ref="916186390"/>
-												<bool key="NSEnabled">YES</bool>
-												<object class="NSTextFieldCell" key="NSCell" id="645345235">
-													<int key="NSCellFlags">68288064</int>
-													<int key="NSCellFlags2">272630784</int>
-													<string key="NSContents">folder name</string>
-													<reference key="NSSupport" ref="1000371022"/>
-													<reference key="NSControlView" ref="302604139"/>
-													<reference key="NSBackgroundColor" ref="655246028"/>
-													<reference key="NSTextColor" ref="633706458"/>
-												</object>
-											</object>
-											<object class="NSButton" id="487937861">
-												<reference key="NSNextResponder" ref="916186390"/>
-												<int key="NSvFlags">268</int>
-												<string key="NSFrame">{{264, 244}, {100, 32}}</string>
-												<reference key="NSSuperview" ref="916186390"/>
-												<bool key="NSEnabled">YES</bool>
-												<object class="NSButtonCell" key="NSCell" id="571554492">
-													<int key="NSCellFlags">67239424</int>
-													<int key="NSCellFlags2">134217728</int>
-													<string key="NSContents">Choose…</string>
-													<reference key="NSSupport" ref="1000371022"/>
-													<reference key="NSControlView" ref="487937861"/>
-													<int key="NSButtonFlags">-2038284033</int>
-													<int key="NSButtonFlags2">129</int>
-													<string key="NSAlternateContents"/>
-													<string key="NSKeyEquivalent"/>
-													<int key="NSPeriodicDelay">200</int>
-													<int key="NSPeriodicInterval">25</int>
-												</object>
-											</object>
 											<object class="NSTextField" id="922489004">
 												<reference key="NSNextResponder" ref="916186390"/>
 												<int key="NSvFlags">268</int>
@@ -1700,7 +1640,7 @@
 													<int key="NSCellFlags2">0</int>
 													<string key="NSContents">Box</string>
 													<reference key="NSSupport" ref="26"/>
-													<object class="NSColor" key="NSBackgroundColor">
+													<object class="NSColor" key="NSBackgroundColor" id="51742210">
 														<int key="NSColorSpace">6</int>
 														<string key="NSCatalogName">System</string>
 														<string key="NSColorName">textBackgroundColor</string>
@@ -1717,6 +1657,99 @@
 												<reference key="NSContentView" ref="235855816"/>
 												<int key="NSBorderType">1</int>
 												<int key="NSBoxType">1</int>
+												<int key="NSTitlePosition">0</int>
+												<bool key="NSTransparent">NO</bool>
+											</object>
+											<object class="NSBox" id="80319538">
+												<reference key="NSNextResponder" ref="916186390"/>
+												<int key="NSvFlags">12</int>
+												<array class="NSMutableArray" key="NSSubviews">
+													<object class="NSView" id="429634855">
+														<reference key="NSNextResponder" ref="80319538"/>
+														<int key="NSvFlags">256</int>
+														<array class="NSMutableArray" key="NSSubviews">
+															<object class="NSImageView" id="665771770">
+																<reference key="NSNextResponder" ref="429634855"/>
+																<int key="NSvFlags">268</int>
+																<set class="NSMutableSet" key="NSDragTypes">
+																	<string>Apple PDF pasteboard type</string>
+																	<string>Apple PICT pasteboard type</string>
+																	<string>Apple PNG pasteboard type</string>
+																	<string>NSFilenamesPboardType</string>
+																	<string>NeXT Encapsulated PostScript v1.2 pasteboard type</string>
+																	<string>NeXT TIFF v4.0 pasteboard type</string>
+																</set>
+																<string key="NSFrame">{{7, 6}, {32, 32}}</string>
+																<reference key="NSSuperview" ref="429634855"/>
+																<bool key="NSEnabled">YES</bool>
+																<object class="NSImageCell" key="NSCell" id="734323195">
+																	<int key="NSCellFlags">130560</int>
+																	<int key="NSCellFlags2">33554432</int>
+																	<int key="NSAlign">0</int>
+																	<int key="NSScale">0</int>
+																	<int key="NSStyle">2</int>
+																	<bool key="NSAnimates">NO</bool>
+																</object>
+																<bool key="NSEditable">YES</bool>
+															</object>
+															<object class="NSTextField" id="302604139">
+																<reference key="NSNextResponder" ref="429634855"/>
+																<int key="NSvFlags">268</int>
+																<string key="NSFrame">{{41, 14}, {203, 17}}</string>
+																<reference key="NSSuperview" ref="429634855"/>
+																<bool key="NSEnabled">YES</bool>
+																<object class="NSTextFieldCell" key="NSCell" id="645345235">
+																	<int key="NSCellFlags">68288064</int>
+																	<int key="NSCellFlags2">272630784</int>
+																	<string key="NSContents">folder name</string>
+																	<reference key="NSSupport" ref="1000371022"/>
+																	<reference key="NSControlView" ref="302604139"/>
+																	<reference key="NSBackgroundColor" ref="655246028"/>
+																	<reference key="NSTextColor" ref="633706458"/>
+																</object>
+															</object>
+															<object class="NSButton" id="487937861">
+																<reference key="NSNextResponder" ref="429634855"/>
+																<int key="NSvFlags">268</int>
+																<string key="NSFrame">{{243, 4}, {100, 32}}</string>
+																<reference key="NSSuperview" ref="429634855"/>
+																<bool key="NSEnabled">YES</bool>
+																<object class="NSButtonCell" key="NSCell" id="571554492">
+																	<int key="NSCellFlags">67239424</int>
+																	<int key="NSCellFlags2">134217728</int>
+																	<string key="NSContents">Choose…</string>
+																	<reference key="NSSupport" ref="1000371022"/>
+																	<reference key="NSControlView" ref="487937861"/>
+																	<int key="NSButtonFlags">-2038284033</int>
+																	<int key="NSButtonFlags2">129</int>
+																	<string key="NSAlternateContents"/>
+																	<string key="NSKeyEquivalent"/>
+																	<int key="NSPeriodicDelay">200</int>
+																	<int key="NSPeriodicInterval">25</int>
+																</object>
+															</object>
+														</array>
+														<string key="NSFrameSize">{348, 46}</string>
+														<reference key="NSSuperview" ref="80319538"/>
+													</object>
+												</array>
+												<string key="NSFrame">{{10, 234}, {348, 46}}</string>
+												<reference key="NSSuperview" ref="916186390"/>
+												<string key="NSOffsets">{0, 0}</string>
+												<object class="NSTextFieldCell" key="NSTitleCell">
+													<int key="NSCellFlags">67239424</int>
+													<int key="NSCellFlags2">0</int>
+													<string key="NSContents">Box</string>
+													<reference key="NSSupport" ref="26"/>
+													<reference key="NSBackgroundColor" ref="51742210"/>
+													<object class="NSColor" key="NSTextColor">
+														<int key="NSColorSpace">3</int>
+														<bytes key="NSWhite">MCAwLjgwMDAwMDAxMTkAA</bytes>
+													</object>
+												</object>
+												<reference key="NSContentView" ref="429634855"/>
+												<int key="NSBorderType">0</int>
+												<int key="NSBoxType">4</int>
 												<int key="NSTitlePosition">0</int>
 												<bool key="NSTransparent">NO</bool>
 											</object>
@@ -1780,6 +1813,9 @@
 			</object>
 			<object class="NSCustomObject" id="261628266">
 				<string key="NSClassName">DMStartup</string>
+			</object>
+			<object class="NSCustomObject" id="752051043">
+				<string key="NSClassName">DMFileDropAreaDelegate</string>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
@@ -2564,6 +2600,14 @@
 					</object>
 					<int key="connectionID">646</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="80319538"/>
+						<reference key="destination" ref="752051043"/>
+					</object>
+					<int key="connectionID">649</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -3109,9 +3153,9 @@
 						<int key="objectID">372</int>
 						<reference key="object" ref="439893737"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="190047987"/>
 							<reference ref="790533739"/>
 							<reference ref="964236439"/>
+							<reference ref="190047987"/>
 						</array>
 						<reference key="parent" ref="972006081"/>
 					</object>
@@ -3460,13 +3504,11 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="964933218"/>
 							<reference ref="922489004"/>
-							<reference ref="665771770"/>
-							<reference ref="302604139"/>
-							<reference ref="487937861"/>
 							<reference ref="846509531"/>
 							<reference ref="596966771"/>
 							<reference ref="200999111"/>
 							<reference ref="609023154"/>
+							<reference ref="80319538"/>
 						</array>
 						<reference key="parent" ref="397691457"/>
 					</object>
@@ -3587,45 +3629,6 @@
 						<int key="objectID">501</int>
 						<reference key="object" ref="1054362664"/>
 						<reference key="parent" ref="964933218"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">502</int>
-						<reference key="object" ref="665771770"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="734323195"/>
-						</array>
-						<reference key="parent" ref="916186390"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">503</int>
-						<reference key="object" ref="734323195"/>
-						<reference key="parent" ref="665771770"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">504</int>
-						<reference key="object" ref="302604139"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="645345235"/>
-						</array>
-						<reference key="parent" ref="916186390"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">505</int>
-						<reference key="object" ref="645345235"/>
-						<reference key="parent" ref="302604139"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">506</int>
-						<reference key="object" ref="487937861"/>
-						<array class="NSMutableArray" key="children">
-							<reference ref="571554492"/>
-						</array>
-						<reference key="parent" ref="916186390"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">507</int>
-						<reference key="object" ref="571554492"/>
-						<reference key="parent" ref="487937861"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">508</int>
@@ -3870,6 +3873,60 @@
 						<int key="objectID">642</int>
 						<reference key="object" ref="577592670"/>
 						<reference key="parent" ref="365751640"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">647</int>
+						<reference key="object" ref="80319538"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="665771770"/>
+							<reference ref="302604139"/>
+							<reference ref="487937861"/>
+						</array>
+						<reference key="parent" ref="916186390"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">502</int>
+						<reference key="object" ref="665771770"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="734323195"/>
+						</array>
+						<reference key="parent" ref="80319538"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">503</int>
+						<reference key="object" ref="734323195"/>
+						<reference key="parent" ref="665771770"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">504</int>
+						<reference key="object" ref="302604139"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="645345235"/>
+						</array>
+						<reference key="parent" ref="80319538"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">505</int>
+						<reference key="object" ref="645345235"/>
+						<reference key="parent" ref="302604139"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">506</int>
+						<reference key="object" ref="487937861"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="571554492"/>
+						</array>
+						<reference key="parent" ref="80319538"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">507</int>
+						<reference key="object" ref="571554492"/>
+						<reference key="parent" ref="487937861"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">648</int>
+						<reference key="object" ref="752051043"/>
+						<reference key="parent" ref="0"/>
 					</object>
 				</array>
 			</object>
@@ -4145,6 +4202,9 @@
 				<string key="640.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="641.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="642.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="647.CustomClassName">DMDragDropBox</string>
+				<string key="647.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="648.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<integer value="1" key="72.ImportedFromIB2"/>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -4176,10 +4236,30 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">646</int>
+			<int key="maxID">649</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">DMDragDropBox</string>
+					<string key="superclassName">NSBox</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">delegate</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier" id="278409780">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Source/Application/Views/DMDragDropBox.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">DMFileDropAreaDelegate</string>
+					<string key="superclassName">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Source/Application/Delegates/DMFileDropAreaDelegate.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">DMLaunchAgentSettings</string>
 					<string key="superclassName">NSObject</string>
@@ -4220,6 +4300,10 @@
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Source/Application/Helpers/DMStartup.h</string>
 					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<reference key="sourceIdentifier" ref="278409780"/>
 				</object>
 			</array>
 			<array class="NSMutableArray" key="referencedPartialClassDescriptionsV3.2+">
